# voteUSA

./: .gitlab-ci.yml  README.md  docker-compose.yml  sonar-project.properties
app/: Dockerfile  pyproject.toml
app/src/: __init__.py  config.py
app/src/blueprints/admin/: __init__.py  admin_model.py  admin_routes.py
app/src/blueprints/admin/admin_templates/: admin.html
app/src/blueprints/main/: __init__.py  main_forms.py  main_model.py  main_routes.py
app/src/blueprints/main/main_templates/: login.html  main.html  profilerequest.html
app/src/blueprints/manager/: __init__.py  manager_model.py  manager_routes.py
app/src/blueprints/manager/manager_templates/: manager.html
app/src/blueprints/voter/: __init__.py  voter_model.py  voter_routes.py
app/src/blueprints/voter/voter_templates/: voter.html
app/src/static/: styles.css
app/src/templates/: layout.html
app/tests/main_tests/: main_model_test.py  main_route_test.py
db/: init.sql
scripts/: create_environment.sh  run_automated_tests.sh  run_flask.sh  start_db_dev.sh  start_website_dev.sh
